Made a Few Changes in Course Mgmt
1) View All changed to be a back button
2) Show an indicator for search i.e. "Showing results for"
3) Make Card white
4) Reduce image size in the edit/add course
5) Change summary to subtitle

--- a/views/catalog.pug
+++ b/views/catalog.pug
@@ -7,7 +7,7 @@ mixin courseCard(course)
         img(src=course.coverImage, alt="Thumbnail")
         h2 #{course.name}
       .card-body
-        p #{course.summary}
+        p #{course.subtitle}
       .card-footer
         a.regBtn(href='/courses/' + course.id + '/view/')
           button.secondary View
