Responsive Course Vue

--- a/styles/include/_vars.scss
+++ b/styles/include/_vars.scss
@@ -10,6 +10,8 @@ $darkGray: #999;
 // Animation
 $animTime: .3s;
 
+$burgerToggleWidth: 768px;
+
 $minSupportedWidth: 360px;
 $maxSupportedWidth: 1280px;
 //
