--- a/flavour/cte/styles/include/_vars.scss
+++ b/flavour/cte/styles/include/_vars.scss
@@ -6,6 +6,7 @@ $black: #020202;
 $blueBlack: #0B2027;
 $tealBlue: #40798C;
 $darkGray: #999;
+$red: rgb(221, 39, 39);
 
 // Animation
 $animTime: .3s;
