--- a/flavour/cte/styles/include/_vars.scss
+++ b/flavour/cte/styles/include/_vars.scss
@@ -11,6 +11,7 @@ $red: rgb(221, 39, 39);
 // Animation
 $animTime: .3s;
 
+// Used in Admin.vue, Course.vue
 $burgerToggleWidth: 768px;
 
 $minSupportedWidth: 360px;
